<resources>
    <string name="app_name">FoodTApp</string>
    <string name="log_in">Log In</string>
    String[] items ={"Trader","User"};
    <string-array name="Role">
        <item>Trader</item>
        <item>User</item>
    </string-array>
    <string name="Role">Role</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="OR">OR</string>
    <string name="food_time">Food Time</string>
    <string name="or">OR</string>
    <string name="menu_home">Home</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_reservation">Reservations</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="la_gourmandise_à_ne_pas_ratter" />
    <string name="the_more_you_stay_the_less_you_pay" />
    <string name="sign_in" />
    <string name="Full_Name" />
    <string name="Sign_in">Sign in</string>
    <string name="email_adress">Email Adress</string>
    <string name="cool_forsa">Cool Forsa</string>
    <string name="Tous_les_achats">All Purchases</string>
    <string name="chercher_votre_produit">Search something</string>
    <string name="rating">5.0</string>
    <string name="product_name">product Name</string>
    <string name="time">Aujourd\'hui 14:00 - 16:30</string>
    <string name="categorie">Category</string>
    <string name="Category">Category</string>
    <string name="SpecialOffer">Special Offer</string>
    <string name="update">Update</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAfdjYErHyXDEfgvAkjYsroRLeSGmvYUh0</string>
    <string name="title_forgot_password">forgot_password</string>
</resources>